@@ -1,4 +1,4 @@
-#define DATE_STR "20.09.2010"
-#define TIME_STR "23:54:28"
-#define SUB_VERS 1694-thus
-#define SVN_VERS "trunk-r151"
+#define DATE_STR "22.09.2010"
+#define TIME_STR "00:04:44"
+#define SUB_VERS 1710-thus
+#define SVN_VERS "trunk-r153"
